added tabs and toggle components, created userbar and settings tab on user page

--- a/client/src/components/css/style.css
+++ b/client/src/components/css/style.css
@@ -23,7 +23,7 @@ body {
 
     font-family: var(--poppins),var(--avenir-roman);
 
-    background-color: #FFFFFF;
+    background: rgb(249, 252, 251);
 }
 
 #root {
