--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     height: fit-content;
+    background-color: rgb(249, 252, 251);
 }
 
 .hero-div {
