--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,3 +10,14 @@
     font-optical-sizing: auto;
   }
 }
+
+@layer utilities{
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .no-scrollbar {
+      -ms-overflow-style: none;  
+      scrollbar-width: none;  
+  }
+}
