--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -20,6 +20,7 @@
     background-color: #fefdfd;
     top: 0;
     z-index: 100;
+    max-width: 100vw;
 }
 
 .logo-section{
@@ -88,7 +89,7 @@
     display: none;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
     .links{
         display: none;
         flex-direction: column;
