--- a/client/src/components/css/reset.css
+++ b/client/src/components/css/reset.css
@@ -2,7 +2,7 @@
 * {
 	padding: 0px;
 	margin: 0px;
-	border: none;
+	@apply transition-colors duration-200;
 }
 
 *,
@@ -24,13 +24,11 @@ a:active {
 /* Links */
 
 a, a:link, a:visited  {
-    color: inherit;
     text-decoration: none;
     display: inline-block;
 }
 
 a:hover  {
-    color: inherit;
     text-decoration: none;
 }
 
